fix image proportions (may result in whitespace)

--- a/assets/less/base/ui/posts.less
+++ b/assets/less/base/ui/posts.less
@@ -103,7 +103,7 @@
 
 	.postImage {
 		height: 100%;
-		width: 100%;
+		max-width: 100%;
 	}
 
 	.postImage--play {
